# pulse

./: .gitignore  README.md  mix.exs  pyproject.toml
.github/workflows/: codeql.yml
apps/api/app/: main.py
assets/css/: app.css
assets/js/: app.js
backend/: mix.exs
backend/config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
backend/lib/pulse/: application.ex
backend/lib/pulse_web/: endpoint.ex
config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
lib/: pulse_web.ex
lib/pulse/: ask.ex  briefs.ex  changeset_helpers.ex  commitments.ex  dashboard.ex  decisions.ex  evidence.ex  intelligence.ex  meetings.ex  project_memory.ex  records.ex  review_inbox.ex  risks.ex  schema.ex  sources.ex  workspaces.ex
lib/pulse/ask/: answer_citation.ex  message.ex  thread.ex
lib/pulse/briefs/: brief.ex
lib/pulse/commitments/: commitment.ex
lib/pulse/decisions/: decision.ex
lib/pulse/evidence/: evidence_reference.ex
lib/pulse/intelligence/: source_passage.ex
lib/pulse/meetings/: meeting.ex
lib/pulse/risks/: risk.ex
lib/pulse/sources/: source.ex  source_chunk.ex  source_duplicate_flag.ex
lib/pulse_web/: endpoint.ex  router.ex
priv/repo/: seeds.exs
priv/static/: pulse.css  pulse.js
pulse/: ai.py  db.py  ids.py  ingestion.py  repository.py  search.py  seed.py  settings.py  storage.py
test/pulse/: ask_test.exs  briefs_test.exs  commitments_test.exs  dashboard_test.exs  decisions_test.exs  intelligence_test.exs  meetings_test.exs  p0_data_model_test.exs  risks_review_inbox_test.exs  sources_test.exs
tests/: test_api_smoke.py
(+30 files in other folders)
