[project]
name = "pulse-foundation"
version = "0.1.0"
description = "Local-first Pulse foundation and evidence engine"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "python-multipart>=0.0.9",
  "uvicorn[standard]>=0.27",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "httpx>=0.27",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
